--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
+  
   <head><title>Adrian E Juarez</title></head>
+  
   <body>
-  	<p>Hello World. My name is Adrian. This site will serve as a hub for various IT and Web projects that I have completed as an undergraduate at Central Washington University, and projects I am currently working on. I also plan to have a blog to coincide with this site. Thanks for stopping by!
+  	
+  	<p><h1>Hello World.</h1></p> 
+  	<p><h2>My name is Adrian.</h2></p> 
+  	
+  	<p>
+  	This site will serve as a hub for various IT and Web projects that I have completed as an undergraduate at Central Washington University, and projects I am currently working on. I also plan to have a blog to coincide with this site. Thanks for stopping by!
   	</p>
+
   </body>
+
 </html>
