--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   	<p><h2>My name is Adrian.</h2></p> 
   	
   	<p>
-  	This site will serve as a hub for various IT and Web projects that I have completed as an undergraduate at Central Washington University, and projects I am currently working on. I also plan to have a blog to coincide with this site. Thanks for stopping by!
+  	This site will serve as a hub for various IT and Web projects that I have completed as an undergraduate at Central Washington University, and projects I am currently working on. I also plan to have a blog to coincide with this site. 
   	</p>
-
+	
+	<p>Thanks for stopping by!</p>
+  
   </body>
 
 </html>
