--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/assets/css/main.css" />
 </head>
 <body>
-
+<h1>Hello World</h1>
 <h3>aejuarez.com is currently undergoing development. Thanks for stopping by!</h3>
 
 <script src="/assets/js/jquery-2.1.1.min.js"></script>
