--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title></title>
+  <title>Adrian Juarez</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">  
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-<h1>Hello World</h1>
+<h1>Hi. I'm Adrian Juarez. Welcome to my web site!</h1>
 <h3>aejuarez.com is currently undergoing development. Thanks for stopping by!</h3>
 
 <script src="/assets/js/jquery-2.1.1.min.js"></script>
