--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,14 @@ permalink: /contact/
 ---
 
 <div class="py2">
-  <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked form-light">
+  <form id="contactform" method="POST" class="form-stacked form-light">
     <input type="text" name="email" class="input mobile-block" placeholder="Email Address">
     <textarea type="text" name="content" class="input mobile-block" rows="5" placeholder="What would you like to say?"></textarea>
+    <input type ="text" name="_gotcha" style="display:none" />
     <input type="submit" class="button button-green button-big mobile-block" value="Send">
   </form>
+  <script>
+    var contactform =  document.getElementById('contactform');
+    contactform.setAttribute('action', '//formspree.io/' + 'aejuarez' + '@' + 'outlook' + '.' + 'com');
+  </script>
 </div>
