--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@ permalink: /contact/
 
 <div class="py2">
   <form id="contactform" method="POST" class="form-stacked form-light">
-    <input type="text" name="email" class="input mobile-block" placeholder="Email Address">
-    <textarea type="text" name="content" class="input mobile-block" rows="5" placeholder="What would you like to say?"></textarea>
+    <input type="text" name="email" class="input mobile-block" placeholder="Email Address" required>
+    <textarea type="text" name="content" class="input mobile-block" rows="5" placeholder="What would you like to say?" required></textarea>
     <input type ="text" name="_gotcha" style="display:none" />
     <input type="hidden" name="_next" value="//aejuarez.com/thanks" />
     <input type="submit" class="button button-green button-big mobile-block" value="Send">
