--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ permalink: /contact/
 ---
 
 <div class="py2">
-  <form id="contactform" method="POST" class="form-stacked form-light">
+  <form id="contactForm" method="POST" class="form-stacked form-light">
     <input type="text" name="email" class="input mobile-block" placeholder="Email Address" required>
     <textarea type="text" name="content" class="input mobile-block" rows="5" placeholder="What would you like to say?" required></textarea>
     <input type ="text" name="_gotcha" style="display:none" />
@@ -13,7 +13,7 @@ permalink: /contact/
     <input type="submit" class="button button-green button-big mobile-block" value="Send">
   </form>
   <script>
-    var contactform =  document.getElementById('contactform');
-    contactform.setAttribute('action', '//formspree.io/' + 'aejuarez' + '@' + 'outlook' + '.' + 'com');
+    var contactForm =  document.getElementById('contactForm');
+    contactForm.setAttribute('action', '//formspree.io/' + 'aejuarez' + '@' + 'outlook' + '.' + 'com');
   </script>
 </div>
