--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,15 @@ permalink: /contact/
 ---
 
 <div class="py2">
-  <form id="contactForm" method="POST" class="form-stacked form-light">
-    <input type="text" name="email" class="input mobile-block" placeholder="Email Address" required>
-    <textarea type="text" name="content" class="input mobile-block" rows="5" placeholder="What would you like to say?" required></textarea>
+  <form id="contactform" method="POST" class="form-stacked form-light">
+    <input type="text" name="email" class="input mobile-block" required placeholder="Email Address">
+    <textarea type="text" name="content" class="input mobile-block" rows="5" required placeholder="What would you like to say?"></textarea>
     <input type ="text" name="_gotcha" style="display:none" />
     <input type="hidden" name="_next" value="//aejuarez.com/thanks" />
     <input type="submit" class="button button-green button-big mobile-block" value="Send">
   </form>
   <script>
-    var contactForm =  document.getElementById('contactForm');
-    contactForm.setAttribute('action', '//formspree.io/' + 'aejuarez' + '@' + 'outlook' + '.' + 'com');
+    var contactform =  document.getElementById('contactform');
+    contactform.setAttribute('action', '//formspree.io/' + 'aejuarez' + '@' + 'outlook' + '.' + 'com');
   </script>
 </div>
